wither_derive/tests/fail/model-read-concern-invalid.stderr
error: malformed wither model read concern attribute

         = help: Unknown literal value `invalid`

 --> tests/fail/model-read-concern-invalid.rs:5:9
  |
5 | #[model(read_concern="invalid")]
  |         ^^^^^^^^^^^^^^^^^^^^^^
